// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HostLeaderboardState > clicks Next and calls completeTask 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <div
          class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
        >
          <button
            data-testid="test-next-button-button"
            disabled=""
            id="next-button"
            name="next-button"
            type="button"
          >
            <div
              class="loadingSpinner"
            >
              <div />
              <div />
              <div />
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="content centerAlign"
    >
      <div
        class="contentWrapper mediumWidth"
      >
        <div
          class="contentInner"
        >
          <h1
            class="typography title full"
          >
            Leaderboard
          </h1>
          <div
            class="leaderboard"
          >
            <div
              class="row gold topPosition"
              style="--row-index: 0;"
            >
              <div
                class="column position"
              >
                <span
                  class="badge"
                >
                  1
                </span>
              </div>
              <div
                class="column nickname"
              >
                <span>
                  ShadowCyborg
                </span>
              </div>
              <div
                class="column score"
              >
                18456
              </div>
            </div>
            <div
              class="row silver topPosition"
              style="--row-index: 1;"
            >
              <div
                class="column position"
              >
                <span
                  class="badge"
                >
                  2
                </span>
              </div>
              <div
                class="column nickname"
              >
                <span>
                  Radar
                </span>
              </div>
              <div
                class="column score"
              >
                18398
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <div
        class="main"
      >
        <div
          class="questions"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-question"
            data-icon="circle-question"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
              fill="currentColor"
            />
          </svg>
          <span>
            1
             / 
            20
          </span>
        </div>
        <div
          class="gamePIN"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-lock-open"
            data-icon="lock-open"
            data-prefix="fas"
            role="img"
            viewBox="0 0 576 512"
          >
            <path
              d="M384 96c0-35.3 28.7-64 64-64s64 28.7 64 64l0 32c0 17.7 14.3 32 32 32s32-14.3 32-32l0-32c0-70.7-57.3-128-128-128S320 25.3 320 96l0 64-160 0c-35.3 0-64 28.7-64 64l0 224c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-224c0-35.3-28.7-64-64-64l-32 0 0-64z"
              fill="currentColor"
            />
          </svg>
          <span>
            123456
          </span>
        </div>
        <div
          class="actions"
        >
          <div
            class="menuButtonWrapper"
          >
            <div
              class="buttonInputContainer buttonInputKindPlain"
            >
              <button
                data-testid="test-settings-button-button"
                id="settings-button"
                name="settings-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-gear"
                  data-icon="gear"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M195.1 9.5C198.1-5.3 211.2-16 226.4-16l59.8 0c15.2 0 28.3 10.7 31.3 25.5L332 79.5c14.1 6 27.3 13.7 39.3 22.8l67.8-22.5c14.4-4.8 30.2 1.2 37.8 14.4l29.9 51.8c7.6 13.2 4.9 29.8-6.5 39.9L447 233.3c.9 7.4 1.3 15 1.3 22.7s-.5 15.3-1.3 22.7l53.4 47.5c11.4 10.1 14 26.8 6.5 39.9l-29.9 51.8c-7.6 13.1-23.4 19.2-37.8 14.4l-67.8-22.5c-12.1 9.1-25.3 16.7-39.3 22.8l-14.4 69.9c-3.1 14.9-16.2 25.5-31.3 25.5l-59.8 0c-15.2 0-28.3-10.7-31.3-25.5l-14.4-69.9c-14.1-6-27.2-13.7-39.3-22.8L73.5 432.3c-14.4 4.8-30.2-1.2-37.8-14.4L5.8 366.1c-7.6-13.2-4.9-29.8 6.5-39.9l53.4-47.5c-.9-7.4-1.3-15-1.3-22.7s.5-15.3 1.3-22.7L12.3 185.8c-11.4-10.1-14-26.8-6.5-39.9L35.7 94.1c7.6-13.2 23.4-19.2 37.8-14.4l67.8 22.5c12.1-9.1 25.3-16.7 39.3-22.8L195.1 9.5zM256.3 336a80 80 0 1 0 -.6-160 80 80 0 1 0 .6 160z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HostLeaderboardState > clicks Next when completeTask is undefined 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <div
          class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
        >
          <button
            data-testid="test-next-button-button"
            disabled=""
            id="next-button"
            name="next-button"
            type="button"
          >
            <div
              class="loadingSpinner"
            >
              <div />
              <div />
              <div />
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="content centerAlign"
    >
      <div
        class="contentWrapper mediumWidth"
      >
        <div
          class="contentInner"
        >
          <h1
            class="typography title full"
          >
            Leaderboard
          </h1>
          <div
            class="leaderboard"
          >
            <div
              class="row gold topPosition"
              style="--row-index: 0;"
            >
              <div
                class="column position"
              >
                <span
                  class="badge"
                >
                  1
                </span>
              </div>
              <div
                class="column nickname"
              >
                <span>
                  ShadowCyborg
                </span>
              </div>
              <div
                class="column score"
              >
                18456
              </div>
            </div>
            <div
              class="row silver topPosition"
              style="--row-index: 1;"
            >
              <div
                class="column position"
              >
                <span
                  class="badge"
                >
                  2
                </span>
              </div>
              <div
                class="column nickname"
              >
                <span>
                  Radar
                </span>
              </div>
              <div
                class="column score"
              >
                18398
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <div
        class="main"
      >
        <div
          class="questions"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-question"
            data-icon="circle-question"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
              fill="currentColor"
            />
          </svg>
          <span>
            1
             / 
            20
          </span>
        </div>
        <div
          class="gamePIN"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-lock-open"
            data-icon="lock-open"
            data-prefix="fas"
            role="img"
            viewBox="0 0 576 512"
          >
            <path
              d="M384 96c0-35.3 28.7-64 64-64s64 28.7 64 64l0 32c0 17.7 14.3 32 32 32s32-14.3 32-32l0-32c0-70.7-57.3-128-128-128S320 25.3 320 96l0 64-160 0c-35.3 0-64 28.7-64 64l0 224c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-224c0-35.3-28.7-64-64-64l-32 0 0-64z"
              fill="currentColor"
            />
          </svg>
          <span>
            123456
          </span>
        </div>
        <div
          class="actions"
        >
          <div
            class="menuButtonWrapper"
          >
            <div
              class="buttonInputContainer buttonInputKindPlain"
            >
              <button
                data-testid="test-settings-button-button"
                id="settings-button"
                name="settings-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-gear"
                  data-icon="gear"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M195.1 9.5C198.1-5.3 211.2-16 226.4-16l59.8 0c15.2 0 28.3 10.7 31.3 25.5L332 79.5c14.1 6 27.3 13.7 39.3 22.8l67.8-22.5c14.4-4.8 30.2 1.2 37.8 14.4l29.9 51.8c7.6 13.2 4.9 29.8-6.5 39.9L447 233.3c.9 7.4 1.3 15 1.3 22.7s-.5 15.3-1.3 22.7l53.4 47.5c11.4 10.1 14 26.8 6.5 39.9l-29.9 51.8c-7.6 13.1-23.4 19.2-37.8 14.4l-67.8-22.5c-12.1 9.1-25.3 16.7-39.3 22.8l-14.4 69.9c-3.1 14.9-16.2 25.5-31.3 25.5l-59.8 0c-15.2 0-28.3-10.7-31.3-25.5l-14.4-69.9c-14.1-6-27.2-13.7-39.3-22.8L73.5 432.3c-14.4 4.8-30.2-1.2-37.8-14.4L5.8 366.1c-7.6-13.2-4.9-29.8 6.5-39.9l53.4-47.5c-.9-7.4-1.3-15-1.3-22.7s.5-15.3 1.3-22.7L12.3 185.8c-11.4-10.1-14-26.8-6.5-39.9L35.7 94.1c7.6-13.2 23.4-19.2 37.8-14.4l67.8 22.5c12.1-9.1 25.3-16.7 39.3-22.8L195.1 9.5zM256.3 336a80 80 0 1 0 -.6-160 80 80 0 1 0 .6 160z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HostLeaderboardState > renders subtitle and leaderboard entries 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <div
          class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
        >
          <button
            data-testid="test-next-button-button"
            id="next-button"
            name="next-button"
            type="button"
          >
            <span>
              Next
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-right"
              data-icon="arrow-right"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="content centerAlign"
    >
      <div
        class="contentWrapper mediumWidth"
      >
        <div
          class="contentInner"
        >
          <h1
            class="typography title full"
          >
            Leaderboard
          </h1>
          <div
            class="leaderboard"
          >
            <div
              class="row gold topPosition"
              style="--row-index: 0;"
            >
              <div
                class="column position"
              >
                <span
                  class="badge"
                >
                  1
                </span>
              </div>
              <div
                class="column nickname"
              >
                <span>
                  ShadowCyborg
                </span>
              </div>
              <div
                class="column score"
              >
                18456
              </div>
            </div>
            <div
              class="row silver topPosition"
              style="--row-index: 1;"
            >
              <div
                class="column position"
              >
                <span
                  class="badge"
                >
                  2
                </span>
              </div>
              <div
                class="column nickname"
              >
                <span>
                  Radar
                </span>
              </div>
              <div
                class="column score"
              >
                18398
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <div
        class="main"
      >
        <div
          class="questions"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-question"
            data-icon="circle-question"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
              fill="currentColor"
            />
          </svg>
          <span>
            1
             / 
            20
          </span>
        </div>
        <div
          class="gamePIN"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-lock-open"
            data-icon="lock-open"
            data-prefix="fas"
            role="img"
            viewBox="0 0 576 512"
          >
            <path
              d="M384 96c0-35.3 28.7-64 64-64s64 28.7 64 64l0 32c0 17.7 14.3 32 32 32s32-14.3 32-32l0-32c0-70.7-57.3-128-128-128S320 25.3 320 96l0 64-160 0c-35.3 0-64 28.7-64 64l0 224c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-224c0-35.3-28.7-64-64-64l-32 0 0-64z"
              fill="currentColor"
            />
          </svg>
          <span>
            123456
          </span>
        </div>
        <div
          class="actions"
        >
          <div
            class="menuButtonWrapper"
          >
            <div
              class="buttonInputContainer buttonInputKindPlain"
            >
              <button
                data-testid="test-settings-button-button"
                id="settings-button"
                name="settings-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-gear"
                  data-icon="gear"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M195.1 9.5C198.1-5.3 211.2-16 226.4-16l59.8 0c15.2 0 28.3 10.7 31.3 25.5L332 79.5c14.1 6 27.3 13.7 39.3 22.8l67.8-22.5c14.4-4.8 30.2 1.2 37.8 14.4l29.9 51.8c7.6 13.2 4.9 29.8-6.5 39.9L447 233.3c.9 7.4 1.3 15 1.3 22.7s-.5 15.3-1.3 22.7l53.4 47.5c11.4 10.1 14 26.8 6.5 39.9l-29.9 51.8c-7.6 13.1-23.4 19.2-37.8 14.4l-67.8-22.5c-12.1 9.1-25.3 16.7-39.3 22.8l-14.4 69.9c-3.1 14.9-16.2 25.5-31.3 25.5l-59.8 0c-15.2 0-28.3-10.7-31.3-25.5l-14.4-69.9c-14.1-6-27.2-13.7-39.3-22.8L73.5 432.3c-14.4 4.8-30.2-1.2-37.8-14.4L5.8 366.1c-7.6-13.2-4.9-29.8 6.5-39.9l53.4-47.5c-.9-7.4-1.3-15-1.3-22.7s.5-15.3 1.3-22.7L12.3 185.8c-11.4-10.1-14-26.8-6.5-39.9L35.7 94.1c7.6-13.2 23.4-19.2 37.8-14.4l67.8 22.5c12.1-9.1 25.3-16.7 39.3-22.8L195.1 9.5zM256.3 336a80 80 0 1 0 -.6-160 80 80 0 1 0 .6 160z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HostLeaderboardState > should render HostLeaderboardState 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <div
          class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
        >
          <button
            data-testid="test-next-button-button"
            id="next-button"
            name="next-button"
            type="button"
          >
            <span>
              Next
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-right"
              data-icon="arrow-right"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="content centerAlign"
    >
      <div
        class="contentWrapper mediumWidth"
      >
        <div
          class="contentInner"
        >
          <h1
            class="typography title full"
          >
            Leaderboard
          </h1>
          <div
            class="leaderboard"
          >
            <div
              class="row gold topPosition"
              style="--row-index: 0;"
            >
              <div
                class="column position"
              >
                <span
                  class="badge"
                >
                  1
                </span>
              </div>
              <div
                class="column nickname"
              >
                <span>
                  ShadowCyborg
                </span>
              </div>
              <div
                class="column score"
              >
                18456
              </div>
            </div>
            <div
              class="row silver topPosition"
              style="--row-index: 1;"
            >
              <div
                class="column position"
              >
                <span
                  class="badge"
                >
                  2
                </span>
              </div>
              <div
                class="column nickname"
              >
                <span>
                  Radar
                </span>
              </div>
              <div
                class="column score"
              >
                18398
              </div>
            </div>
            <div
              class="row bronze topPosition"
              style="--row-index: 2;"
            >
              <div
                class="column position"
              >
                <span
                  class="badge"
                >
                  3
                </span>
              </div>
              <div
                class="column nickname"
              >
                <span>
                  ShadowWhirlwind
                </span>
              </div>
              <div
                class="column score"
              >
                15492
              </div>
            </div>
            <div
              class="row"
              style="--row-index: 3;"
            >
              <div
                class="column position"
              >
                <span
                  class="badge"
                >
                  4
                </span>
              </div>
              <div
                class="column nickname"
              >
                <span>
                  WhiskerFox
                </span>
              </div>
              <div
                class="column score"
              >
                14118
              </div>
            </div>
            <div
              class="row"
              style="--row-index: 4;"
            >
              <div
                class="column position"
              >
                <span
                  class="badge"
                >
                  5
                </span>
              </div>
              <div
                class="column nickname"
              >
                <span>
                  JollyNimbus
                </span>
              </div>
              <div
                class="column score"
              >
                13463
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <div
        class="main"
      >
        <div
          class="questions"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-question"
            data-icon="circle-question"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
              fill="currentColor"
            />
          </svg>
          <span>
            1
             / 
            20
          </span>
        </div>
        <div
          class="gamePIN"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-lock-open"
            data-icon="lock-open"
            data-prefix="fas"
            role="img"
            viewBox="0 0 576 512"
          >
            <path
              d="M384 96c0-35.3 28.7-64 64-64s64 28.7 64 64l0 32c0 17.7 14.3 32 32 32s32-14.3 32-32l0-32c0-70.7-57.3-128-128-128S320 25.3 320 96l0 64-160 0c-35.3 0-64 28.7-64 64l0 224c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-224c0-35.3-28.7-64-64-64l-32 0 0-64z"
              fill="currentColor"
            />
          </svg>
          <span>
            123456
          </span>
        </div>
        <div
          class="actions"
        >
          <div
            class="menuButtonWrapper"
          >
            <div
              class="buttonInputContainer buttonInputKindPlain"
            >
              <button
                data-testid="test-settings-button-button"
                id="settings-button"
                name="settings-button"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-gear"
                  data-icon="gear"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M195.1 9.5C198.1-5.3 211.2-16 226.4-16l59.8 0c15.2 0 28.3 10.7 31.3 25.5L332 79.5c14.1 6 27.3 13.7 39.3 22.8l67.8-22.5c14.4-4.8 30.2 1.2 37.8 14.4l29.9 51.8c7.6 13.2 4.9 29.8-6.5 39.9L447 233.3c.9 7.4 1.3 15 1.3 22.7s-.5 15.3-1.3 22.7l53.4 47.5c11.4 10.1 14 26.8 6.5 39.9l-29.9 51.8c-7.6 13.1-23.4 19.2-37.8 14.4l-67.8-22.5c-12.1 9.1-25.3 16.7-39.3 22.8l-14.4 69.9c-3.1 14.9-16.2 25.5-31.3 25.5l-59.8 0c-15.2 0-28.3-10.7-31.3-25.5l-14.4-69.9c-14.1-6-27.2-13.7-39.3-22.8L73.5 432.3c-14.4 4.8-30.2-1.2-37.8-14.4L5.8 366.1c-7.6-13.2-4.9-29.8 6.5-39.9l53.4-47.5c-.9-7.4-1.3-15-1.3-22.7s.5-15.3 1.3-22.7L12.3 185.8c-11.4-10.1-14-26.8-6.5-39.9L35.7 94.1c7.6-13.2 23.4-19.2 37.8-14.4l67.8 22.5c12.1-9.1 25.3-16.7 39.3-22.8L195.1 9.5zM256.3 336a80 80 0 1 0 -.6-160 80 80 0 1 0 .6 160z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
